# zev_simple_rag

./: .gitignore  CONFIGURATION_GUIDE.md  README.md  start.bat  start_with_check.bat  stop.bat
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/knowledge_base/gemini/core_capabilities/: gemini_function_calling.md  gemini_thought_signatures.md
backend/knowledge_base/gemini/guides/: gemini_token_counting.md
backend/knowledge_base/gemini/tools_and_agents/: gemini_file_search.md
backend/knowledge_base/rag_assets/chroma_official/collections/: chroma_add_data.md  chroma_configure_collections.md  chroma_delete_data.md  chroma_manage_collections.md  chroma_update_data.md
backend/knowledge_base/rag_assets/chroma_official/embedding/: chroma_embedding_functions.md  chroma_multimodal_embeddings.md
backend/knowledge_base/rag_assets/chroma_official/overview_and_running/: chroma_architecture.md  chroma_chroma_clients.md  chroma_client-server_Mode.md
backend/knowledge_base/rag_assets/chroma_official/querying_collections/: chroma_full_text_search.md  chroma_metadata_filtering.md  chroma_query_and_get.md
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: chat.py  sessions.py
backend/src/application/: dtos.py  services.py
backend/src/core/: config.py  logging.py
backend/src/domain/: entities.py
backend/src/infrastructure/database/: models.py  session.py
backend/src/infrastructure/ml/: rag_service.py
backend/src/infrastructure/repositories/: session_repository.py
frontend/: README.md  index.html  (+1 more)
(+17 files in other folders)
